--- a/2_market.html
+++ b/2_market.html
@@ -43,7 +43,8 @@
     h2 {font-family: 'Montserrat', sans-serif; font-weight: bold; text-align: center;}
     h3 {font-family: 'Montserrat', sans-serif; text-align: center;}
     h4 {font-family: 'Montserrat', sans-serif; font-weight: bold; text-align: center;}
-    p {font-family: 'Lora', serif; text-align: center;}
+    p {font-family: 'Lora', serif;}
+
 
     img {border: 1px solid #edeae6;}
 
@@ -79,17 +80,17 @@
 <h1>'Tis the season ...
   <br>to shop, give, and be inspired.</h1>
 <div class="w3-container">
-<p class="padding left">Join us at our FIRST annual Haute Holiday Market! Sip on a relaxing beverage
+<p class="padding">Join us at our FIRST annual Haute Holiday Market! Sip on a relaxing beverage
   and shop local products created by some of the best and most talented Minnesota makers.
   Jewelry, candles, decor, and more - we have it all.</p>
 
-<p class="padding left">Our studio space will be bedazzled with current, on-trend holiday designs you
+<p class="padding">Our studio space will be bedazzled with current, on-trend holiday designs you
   can bring back to your own home.</p>
 
-  <p class="padding left">Designer gift-wrapping also on location! You can avoid the stress and let our
+  <p class="padding">Designer gift-wrapping also on location! You can avoid the stress and let our
     pros handle the mess.</p>
 
-  <p class="padding left"> Leave feeling festive, inspired, and full of joy after experiencing this
+  <p class="padding"> Leave feeling festive, inspired, and full of joy after experiencing this
     new local event.</p>
   <div>
 
@@ -97,53 +98,56 @@
       <div class="column" style="padding-right: 20px;">
         <img src="photos_index/mkt/blackcandle.jpg" alt="black candle" style="width:100%">
           <br>
+          <br>
         <h2>Wednesday, December 4, 2019
         <br>11AM-1PM
         <br>5:30PM-7:30PM</h2>
         <h4>at Haute House Studio</h4>
 
       <br>
-      <br>
 
-      <div class="row">
+    <div class="row">
       <div class="column">
+
         <h3>Haute House Studio</h3>
         <p>Fresh florals, house-poured candles, and custom gift-wrapping.</p>
 
         <h3>Studio Mary Jane</h3>
         <p>Clutches, bucket bags, and totes. Designed with patterns to please anyone.</p>
 
+
         <h3>Num Nuts</h3>
         <p>Small-batch, delicious, paleo-friendly, vegan nuts and snacks.</p>
-      </div>
-      <div class="column">
+    </div>
+
+    <div class="column">
+
         <h3>Freak Flag Foods</h3>
         <p>Organic sauces to add to anything you eat.</p>
 
         <h3>Namakan Fur</h3>
         <p>Hats and puffs, ruffs, accessories, and more to bridge the gap between winter style and warmth.</p>
 
+
         <h3>Edina Spiritwear</h3>
         <p>Tees, hats, sweatshirts and more to support your local team.</p>
 
-    <br>
-
-
-      </div>
-    </div>
-
 <br>
 
-      </div>
+    </div>
+  </div>
+</div>
+
       <div class="column" style="padding-left: 20px;">
         <img src="photos_pages/blackredgifts.jpg" alt="black and red gift wrapping" style="width:100%">
+<br>
+<br>
 
     <h2>Wednesday, December 11, 2019
     <br>11AM-1PM
     <br>5:30PM-7:30PM</h2>
     <h4>at Haute House Studio</h4>
 
-<br>
 <br>
 
 <div class="row">
@@ -193,67 +197,112 @@
 
 <br>
 
+<div class="w3-container">
 <h2>Who are our vendors?</h2>
-  <h3>Haute House Studio</h3>
-    <div class="leftcolumnvendor"></div>
-    <div class="rightcolumnvendor"></div>
 
-  <h3>ALICE</h3>
-    <div class="leftcolumn"><p>ALICE bags are created for you to channel your inner confidence and strength
-      while being beautiful. ALICE bags are designed to act as the finishing touch to any outfit.</div>
-    <div class="rightcolumn"></p></div>
+  <div class="row">
+    <h3>Haute House Studio</h3>
+      <div class="leftcolumnvendor"><img src="photos_mktlogos/hhs.png" style="border: none;"></div>
+      <div class="rightcolumnvendor"><p>Haute House Studio is a boutique floral & event studio located in
+        Edina, Minnesota. We are known for our energy, enthusiasm, creativity, and attention
+        to detail. We connect with our clients on a personal level, understand your vision, and then
+        bring that vision to life in an amazing and memorable way. Our goal is to inspire and celebrate
+        beauty and creativity in all people by creating wow-worthy florals, event designs, connections,
+        and community.</p></div>
+  </div>
 
-  <h3>Edina Spiritwear</h3>
-    <div class="leftcolumnvendor"></div>
-    <div class="rightcolumnvendor"></div>
+<br>
 
-  <h3>Freak Flag Foods</h3>
-    <div class="leftcolumn"><p>Freak Flag Foods is an invitation to inspire imagination and creativity.
+  <div class="row">
+    <h3>ALICE</h3>
+      <div class="leftcolumnvendor"><img src="photos_mktlogos/alice.png"></div>
+      <div class="rightcolumnvendor"><p>ALICE bags are created for you to channel your inner confidence and strength
+        while being beautiful. ALICE bags are designed to act as the finishing touch to any outfit.</p></div>
+  </div>
+
+<br>
+
+  <div class="row">
+    <h3>Edina Spiritwear</h3>
+      <div class="leftcolumnvendor"><img src="photos_mktlogos/edina.jpg"></div>
+      <div class="rightcolumnvendor"><p class="left">Support your favorite local team <em>and</em> be the best dressed!</p></div>
+  </div>
+
+<br>
+
+  <div class="row">
+    <h3>Freak Flag Foods</h3>
+      <div class="leftcolumnvendor"><img src="photos_mktlogos/fff.jpg" style="border: none;"></div>
+      <div class="rightcolumnvendor"><p class="left">Freak Flag Foods is an invitation to inspire imagination and creativity.
       It's a rallying cry for anyone and everyone to express themselves by getting carried away in the kitchen.
       In collaboration with veteran local chef Mary Jane Miller, who has crafted these delightfully unique and
-      full-flavored organic master sauces — the possibilities of what you can whip up are as easy as they are endless.
-      So, go on, and be yourself in the kitchen and in life. We can't wait to see what you cook up.</div>
-    <div class="rightcolumn"></p></div>
+      full-flavored organic master sauces - the possibilities of what you can whip up are as easy as they are endless.
+      So, go on, and be yourself in the kitchen and in life. We can't wait to see what you cook up.</p></div>
+  </div>
 
-  <h3>Jessica Matrasko Jewelry</h3>
-    <div class="leftcolumnvendor"></div>
-    <div class="rightcolumnvendor"><p>Jessica Matrasko Jewelry was established in 2007 with the
-      modern woman in mind. We think jewelry should be on trend, but never trendy, so we use organic
-      materials and high quality, hypoallergenic 14K gold filled metal. We want you to wear these styles
-      for years to come, and we encourage you to layer pieces, to mix and match and to create your own
-      favorite look, that evolves just as your personal style does.</p></div>
+<br>
 
-  <h3>KT Design</h3>
-    <div class="leftcolumn"><p>KT Design has the perfect range of gifts for everyone on your list from
-      family to friends to teachers - even yourself! KT Design creates a variety of oilcloth zip-its, totes to plaid infinity scarves,
+  <div class="row">
+    <h3>Jessica Matrasko Jewelry</h3>
+      <div class="leftcolumnvendor"><img src="photos_mktlogos/jmj.png" style="border: none;"></div>
+      <div class="rightcolumnvendor"><p class="left">Jessica Matrasko Jewelry was established in 2007 with the
+        modern woman in mind. We think jewelry should be on trend, but never trendy, so we use organic
+        materials and high quality, hypoallergenic 14K gold filled metal. We want you to wear these styles
+        for years to come, and we encourage you to layer pieces, to mix and match and to create your own
+        favorite look, that evolves just as your personal style does.</p></div>
+  </div>
+
+<br>
+
+  <div class="row">
+    <h3>KT Design</h3>
+      <div class="leftcolumnvendor"><img src="photos_mktlogos/ktdesign.jpg"></div>
+      <div class="rightcolumnvendor"><p class="left">KT Design has the perfect range of gifts for everyone on your list from
+        family to friends to teachers - even yourself! KT Design creates a variety of oilcloth zip-its, totes to plaid infinity scarves,
         cowls, and wristlets for everyone on your list. Pair your cowl with a graphic tee for a complete look.
-        Brand new waxed canvas and leather handbags are making their debut this fall.
-    <div class="rightcolumn"></p></div>
+        Brand new waxed canvas and leather handbags are making their debut this fall.</p></div>
+  </div>
 
-  <h3>Namakan Fur</h3>
-    <div class="leftcolumnvendor"></div>
-    <div class="rightcolumnvendor"><p>As born and bred Minnesotans, we know that with the right gear,
-      there’s no such thing as too cold. However, we’re often faced with the choice of looking great and
+<br>
+
+  <div class="row">
+    <h3>Namakan Fur</h3>
+      <div class="leftcolumnvendor"><img src="photos_mktlogos/namakan.jpg" style="border: none;"></div>
+      <div class="rightcolumnvendor"><p class="left">As born and bred Minnesotans, we know that with the right gear,
+      there's no such thing as too cold. However, we're often faced with the choice of looking great and
       freezing, or staying warm in frumpy gear. Namakan bridges the gap between winter style and comfort,
       from the head down with our faux fur ruffs that attach to any hood or collar, beanies, earmuffs,
       mittens and more.</p></div>
+  </div>
 
-  <h3>Num Nuts</h3>
-    <div class="leftcolumn"><p>Chika Griswold started Num Nuts in her Minnesota kitchen. Her passion for cooking
+<br>
+
+  <div class="row">
+    <h3>Num Nuts</h3>
+      <div class="leftcolumnvendor"><img src="photos_mktlogos/numnuts.jpg"></div>
+      <div class="rightcolumnvendor"><p class="left">Chika Griswold started Num Nuts in her Minnesota kitchen. Her passion for cooking
       and love of simple, healthy foods led her to try roasting her own nuts at home. Over time, she developed a unique
       recipe and roasting technique that delivered just the right amount of sweetness and saltiness and
       allowed the delicious flavors of the nuts to shine through.
       <br>Why the name "Num Nuts"? Because num, num, num, num, num!</p></div>
-    <div class="rightcolumn"></div>
+  </div>
 
-  <h3>Studio Mary Jane</h3>
-    <div class="leftcolumnvendor"></div>
-    <div class="rightcolumnvendor"><p>Mary Jane started her business with custom orders where she could work with clients
-      to create unique and one-of-kind bags. Her passion for fabrics of all colors, textures, and patterns is her
-      true inspiration. Mary Jane loves observing current fashion trends and working them into bags that people can
-      really use. All Studio Mary Jane bags are handmade and fully customizable!</p></div>
+<br>
+
+  <div class="row">
+    <h3>Studio Mary Jane</h3>
+      <div class="leftcolumnvendor"><img src="photos_mktlogos/smj.jpg"></div>
+      <div class="rightcolumnvendor"><p class="left">Mary Jane started her business with custom orders where she could work with clients
+        to create unique and one-of-kind bags. Her passion for fabrics of all colors, textures, and patterns is her
+        true inspiration. Mary Jane loves observing current fashion trends and working them into bags that people can
+        really use. All Studio Mary Jane bags are handmade and fully customizable!</p></div>
+  </div>
 
 </div>
+
+<br>
+<br>
+
   <footer>
     <h3>HAUTE HOUSE STUDIO</h3>
     <div class="row">
@@ -267,7 +316,8 @@
           <br>Suite 150
           <br>Edina, MN 55436</p>
       </div>
-  </div></footer>
+    </div>
+  </footer>
 
   <script>
   function myFunction() {
