--- a/2_market.html
+++ b/2_market.html
@@ -283,8 +283,7 @@
       <div class="rightcolumnvendor"><p class="left">Chika Griswold started Num Nuts in her Minnesota kitchen. Her passion for cooking
       and love of simple, healthy foods led her to try roasting her own nuts at home. Over time, she developed a unique
       recipe and roasting technique that delivered just the right amount of sweetness and saltiness and
-      allowed the delicious flavors of the nuts to shine through.
-      <br>Why the name "Num Nuts"? Because num, num, num, num, num!</p></div>
+      allowed the delicious flavors of the nuts to shine through. Why the name "Num Nuts"? Because num, num, num, num, num!</p></div>
   </div>
 
 <br>
