update logo file pathways

--- a/2_market.html
+++ b/2_market.html
@@ -224,7 +224,7 @@
 
   <div class="row">
     <h3>Edina Spiritwear</h3>
-      <div class="leftcolumnvendor"><img src="photos_mktlogos/edina.jpg"></div>
+      <div class="leftcolumnvendor"><img src="photos_mktlogos/edina.png"></div>
       <div class="rightcolumnvendor"><p class="left">Support your favorite local team <em>and</em> be the best dressed!</p></div>
   </div>
 
@@ -232,7 +232,7 @@
 
   <div class="row">
     <h3>Freak Flag Foods</h3>
-      <div class="leftcolumnvendor"><img src="photos_mktlogos/fff.jpg" style="border: none;"></div>
+      <div class="leftcolumnvendor"><img src="photos_mktlogos/fff.png" style="border: none;"></div>
       <div class="rightcolumnvendor"><p class="left">Freak Flag Foods is an invitation to inspire imagination and creativity.
       It's a rallying cry for anyone and everyone to express themselves by getting carried away in the kitchen.
       In collaboration with veteran local chef Mary Jane Miller, who has crafted these delightfully unique and
@@ -256,7 +256,7 @@
 
   <div class="row">
     <h3>KT Design</h3>
-      <div class="leftcolumnvendor"><img src="photos_mktlogos/ktdesign.jpg"></div>
+      <div class="leftcolumnvendor"><img src="photos_mktlogos/ktdesign.png"></div>
       <div class="rightcolumnvendor"><p class="left">KT Design has the perfect range of gifts for everyone on your list from
         family to friends to teachers - even yourself! KT Design creates a variety of oilcloth zip-its, totes to plaid infinity scarves,
         cowls, and wristlets for everyone on your list. Pair your cowl with a graphic tee for a complete look.
@@ -267,7 +267,7 @@
 
   <div class="row">
     <h3>Namakan Fur</h3>
-      <div class="leftcolumnvendor"><img src="photos_mktlogos/namakan.jpg" style="border: none;"></div>
+      <div class="leftcolumnvendor"><img src="photos_mktlogos/namakan.png" style="border: none;"></div>
       <div class="rightcolumnvendor"><p class="left">As born and bred Minnesotans, we know that with the right gear,
       there's no such thing as too cold. However, we're often faced with the choice of looking great and
       freezing, or staying warm in frumpy gear. Namakan bridges the gap between winter style and comfort,
@@ -279,7 +279,7 @@
 
   <div class="row">
     <h3>Num Nuts</h3>
-      <div class="leftcolumnvendor"><img src="photos_mktlogos/numnuts.jpg"></div>
+      <div class="leftcolumnvendor"><img src="photos_mktlogos/numnuts.png"></div>
       <div class="rightcolumnvendor"><p class="left">Chika Griswold started Num Nuts in her Minnesota kitchen. Her passion for cooking
       and love of simple, healthy foods led her to try roasting her own nuts at home. Over time, she developed a unique
       recipe and roasting technique that delivered just the right amount of sweetness and saltiness and
