added new vendor bios

--- a/2_market.html
+++ b/2_market.html
@@ -223,6 +223,16 @@
 <br>
 
   <div class="row">
+    <h3>CurioCities</h3>
+      <div class="leftcolumnvendor"><img src="photos_mktlogos/curiocities.png"></div>
+      <div class="rightcolumnvendor"><p>Our mission is to be the industry leader in socially-conscious,
+        high-quality, handcrafted jewelry at an affordable price. Style should also have value. We believe
+        every woman should feel confident and empowered with our accessory collection at her fingertips.</p></div>
+  </div>
+
+<br>
+
+  <div class="row">
     <h3>Edina Spiritwear</h3>
       <div class="leftcolumnvendor"><img src="photos_mktlogos/edina.png"></div>
       <div class="rightcolumnvendor"><p class="left">Support your favorite local team <em>and</em> be the best dressed!</p></div>
@@ -266,6 +276,24 @@
 <br>
 
   <div class="row">
+    <h3>Madeline Lynne Baubles</h3>
+      <div class="leftcolumnvendor"><img src="photos_mktlogos/MLB.jpg"></div>
+      <div class="rightcolumnvendor"><p class="left">Mother-daughter duo Sarah and Maddie love all things creative and GIRLY!
+        Together, they've created fun, sassy, global treasures everyone will love! Their jewelry is created to help your
+        light shine bright.</p></div>
+  </div>
+
+<br>
+
+  <div class="row">
+    <h3>Nu Skin</h3>
+      <div class="leftcolumnvendor"></div>
+      <div class="rightcolumnvendor"><p class="left"></p></div>
+  </div>
+
+<br>
+
+  <div class="row">
     <h3>Namakan Fur</h3>
       <div class="leftcolumnvendor"><img src="photos_mktlogos/namakan.png" style="border: none;"></div>
       <div class="rightcolumnvendor"><p class="left">As born and bred Minnesotans, we know that with the right gear,
@@ -296,6 +324,17 @@
         true inspiration. Mary Jane loves observing current fashion trends and working them into bags that people can
         really use. All Studio Mary Jane bags are handmade and fully customizable!</p></div>
   </div>
+
+<br>
+
+  <div class="row">
+    <h3>Thumbs Cookies</h3>
+      <div class="leftcolumnvendor"><img src="photos_mktlogos/thumbscookies.png" style="border: none;"></div>
+      <div class="rightcolumnvendor"><p class="left">Thumbs Cookies is a local cookie company that makes tiny delicious
+        butter cookies. Not only are the delicious, but they are pretty cute too! We hope you enjoy the perfect bite
+        from Robyn and her Thumbs Team!</p></div>
+  </div>
+
 
 </div>
 
