new vendors under their market dates

--- a/2_market.html
+++ b/2_market.html
@@ -111,27 +111,38 @@
 
         <h3>Haute House Studio</h3>
         <p>Fresh florals, house-poured candles, and custom gift-wrapping.</p>
-
-        <h3>Studio Mary Jane</h3>
-        <p>Clutches, bucket bags, and totes. Designed with patterns to please anyone.</p>
-
-
+        <br>
+        <h3>Namakan Fur</h3>
+        <p>Hats and puffs, ruffs, accessories, and more to bridge the gap between winter style and warmth.</p>
+        <br>
+        <h3>CurioCities</h3>
+        <p>Beautiful decor for your home and gorgeous jewelry for you.</p>
+        <br>
         <h3>Num Nuts</h3>
-        <p>Small-batch, delicious, paleo-friendly, vegan nuts and snacks.</p>
+        <p>Small-batch delicious, paleo-friendly, vegan nuts and snacks.</p>
+        <br>
+        <h3>Thumbs Cookies</h3>
+        <p>Tiny, melt-in-your mouth, delicious butter cookies made with high-quality ingredients.</p>
+
     </div>
 
     <div class="column">
 
         <h3>Freak Flag Foods</h3>
         <p>Organic sauces to add to anything you eat.</p>
-
-        <h3>Namakan Fur</h3>
-        <p>Hats and puffs, ruffs, accessories, and more to bridge the gap between winter style and warmth.</p>
-
-
+        <br>
+        <h3>Studio Mary Jane</h3>
+        <p>Clutches, bucket bags, and totes. Designed with patterns to please anyone.</p>
+        <br>
         <h3>Edina Spiritwear</h3>
         <p>Tees, hats, sweatshirts and more to support your local team.</p>
-
+        <br>
+        <h3>Nu Skin</h3>
+        <p> Lipglosses and toothpastes for the freshest mouth in town.</p>
+        <br>
+        <h3>Madeline Lynne Baubles</h3>
+        <p>Fun, sassy, global treasures.</p>
+        
 <br>
 
     </div>
@@ -154,20 +165,34 @@
   <div class="column">
       <h3>Haute House Studio</h3>
       <p>Fresh florals, house-poured candles, and custom gift-wrapping.</p>
-
-      <h3 style="font-size: 22px;">Jessica Matrasko Jewelry</h3>
-      <p>Delicate and beautiful jewelry designed in Hollywood and brought to MN.</p>
-
+      <br>
+      <h3>Thumbs Cookies</h3>
+      <p>Tiny, melt-in-your mouth, delicious butter cookies made with high-quality ingredients.</p>
+      <br>
       <h3>Freak Flag Foods</h3>
       <p>Organic sauces to add to anything you eat.</p>
+      <br>
+      <h3>Nu Skin</h3>
+      <p>Lipglosses and toothpastes for the freshest mouth in town.</p>
+      <br>
+      <h3>Jessica Matrasko Jewelry</h3>
+      <p>Delicate and beautiful jewelry designed in Hollywood and brought to MN.</p>
+
+
   </div>
 
   <div class="column">
       <h3>ALICE</h3>
       <p>Cross-body, bucket, and mini-chain bags designed with style in mind.</p>
-
+      <br>
       <h3>KT Design</h3>
       <p>Zip-its, totes, infinity scarves, cowls, and wristlets for everyone on your list.</p>
+      <br>
+      <h3>CurioCities</h3>
+      <p>Beautiful decor for your home and gorgeous jewelry for you.</p>
+      <br>
+      <h3>Madeline Lynne Baubles</h3>
+      <p>Fun, sassy, global treasures.</p>
   </div>
 
 </div>
@@ -224,7 +249,7 @@
 
   <div class="row">
     <h3>CurioCities</h3>
-      <div class="leftcolumnvendor"><img src="photos_mktlogos/curiocities.png"></div>
+      <div class="leftcolumnvendor"><img src="photos_mktlogos/curiocities.jpg" style="border: none;"></div>
       <div class="rightcolumnvendor"><p>Our mission is to be the industry leader in socially-conscious,
         high-quality, handcrafted jewelry at an affordable price. Style should also have value. We believe
         every woman should feel confident and empowered with our accessory collection at her fingertips.</p></div>
@@ -277,7 +302,7 @@
 
   <div class="row">
     <h3>Madeline Lynne Baubles</h3>
-      <div class="leftcolumnvendor"><img src="photos_mktlogos/MLB.jpg"></div>
+      <div class="leftcolumnvendor"><img src="photos_mktlogos/MLB.jpg" style="border: none;"></div>
       <div class="rightcolumnvendor"><p class="left">Mother-daughter duo Sarah and Maddie love all things creative and GIRLY!
         Together, they've created fun, sassy, global treasures everyone will love! Their jewelry is created to help your
         light shine bright.</p></div>
@@ -329,7 +354,7 @@
 
   <div class="row">
     <h3>Thumbs Cookies</h3>
-      <div class="leftcolumnvendor"><img src="photos_mktlogos/thumbscookies.png" style="border: none;"></div>
+      <div class="leftcolumnvendor"><img src="photos_mktlogos/thumbs.png" style="border: none;"></div>
       <div class="rightcolumnvendor"><p class="left">Thumbs Cookies is a local cookie company that makes tiny delicious
         butter cookies. Not only are the delicious, but they are pretty cute too! We hope you enjoy the perfect bite
         from Robyn and her Thumbs Team!</p></div>
