--- a/2_market.html
+++ b/2_market.html
@@ -109,40 +109,40 @@
     <div class="row">
       <div class="column">
 
-        <h3>Haute House Studio</h3>
+        <h3><a href="#hhs">Haute House Studio</a></h3>
         <p>Fresh florals, house-poured candles, and custom gift-wrapping.</p>
         <br>
-        <h3>Namakan Fur</h3>
+        <h3><a href="#namakan">Namakan Fur</a></h3>
         <p>Hats and puffs, ruffs, accessories, and more to bridge the gap between winter style and warmth.</p>
         <br>
-        <h3>CurioCities</h3>
+        <h3><a href="#cc">CurioCities</a></h3>
         <p>Beautiful decor for your home and gorgeous jewelry for you.</p>
         <br>
-        <h3>Num Nuts</h3>
+        <h3><a href="#nn">Num Nuts</a></h3>
         <p>Small-batch delicious, paleo-friendly, vegan nuts and snacks.</p>
         <br>
-        <h3>Thumbs Cookies</h3>
+        <h3><a href="#tc">Thumbs Cookies</a></h3>
         <p>Tiny, melt-in-your mouth, delicious butter cookies made with high-quality ingredients.</p>
 
     </div>
 
     <div class="column">
 
-        <h3>Freak Flag Foods</h3>
+        <h3><a href="#fff">Freak Flag Foods</a></h3>
         <p>Organic sauces to add to anything you eat.</p>
         <br>
-        <h3>Studio Mary Jane</h3>
+        <h3><a href="#smj">Studio Mary Jane</a></h3>
         <p>Clutches, bucket bags, and totes. Designed with patterns to please anyone.</p>
         <br>
-        <h3>Edina Spiritwear</h3>
+        <h3><a href="#es">Edina Spiritwear</a></h3>
         <p>Tees, hats, sweatshirts and more to support your local team.</p>
         <br>
-        <h3>Nu Skin</h3>
+        <h3><a href="#ns">Nu Skin</a></h3>
         <p> Lipglosses and toothpastes for the freshest mouth in town.</p>
         <br>
-        <h3>Madeline Lynne Baubles</h3>
+        <h3><a href="#mlb">Madeline Lynne Baubles</a></h3>
         <p>Fun, sassy, global treasures.</p>
-        
+
 <br>
 
     </div>
@@ -163,35 +163,35 @@
 
 <div class="row">
   <div class="column">
-      <h3>Haute House Studio</h3>
+      <h3><a href="#hhs">Haute House Studio</a></h3>
       <p>Fresh florals, house-poured candles, and custom gift-wrapping.</p>
       <br>
-      <h3>Thumbs Cookies</h3>
+      <h3><a href="#tc">Thumbs Cookies</a></h3>
       <p>Tiny, melt-in-your mouth, delicious butter cookies made with high-quality ingredients.</p>
       <br>
-      <h3>Freak Flag Foods</h3>
+      <h3><a href="#fff">Freak Flag Foods</a></h3>
       <p>Organic sauces to add to anything you eat.</p>
       <br>
-      <h3>Nu Skin</h3>
+      <h3><a href="#ns">Nu Skin</a></h3>
       <p>Lipglosses and toothpastes for the freshest mouth in town.</p>
       <br>
-      <h3>Jessica Matrasko Jewelry</h3>
+      <h3><a href="#jmj">Jessica Matrasko Jewelry</a></h3>
       <p>Delicate and beautiful jewelry designed in Hollywood and brought to MN.</p>
 
 
   </div>
 
   <div class="column">
-      <h3>ALICE</h3>
+      <h3><a href="#alice">ALICE</a></h3>
       <p>Cross-body, bucket, and mini-chain bags designed with style in mind.</p>
       <br>
-      <h3>KT Design</h3>
+      <h3><a href="#kt">KT Design</a></h3>
       <p>Zip-its, totes, infinity scarves, cowls, and wristlets for everyone on your list.</p>
       <br>
-      <h3>CurioCities</h3>
+      <h3><a href="#cc">CurioCities</a></h3>
       <p>Beautiful decor for your home and gorgeous jewelry for you.</p>
       <br>
-      <h3>Madeline Lynne Baubles</h3>
+      <h3><a href="#mlb">Madeline Lynne Baubles</a></h3>
       <p>Fun, sassy, global treasures.</p>
   </div>
 
@@ -226,6 +226,7 @@
 <h2>Who are our vendors?</h2>
 
   <div class="row">
+    <a name="hhs">
     <h3>Haute House Studio</h3>
       <div class="leftcolumnvendor"><img src="photos_mktlogos/hhs.png" style="border: none;"></div>
       <div class="rightcolumnvendor"><p>Haute House Studio is a boutique floral & event studio located in
@@ -239,6 +240,7 @@
 <br>
 
   <div class="row">
+    <a name="alice">
     <h3>ALICE</h3>
       <div class="leftcolumnvendor"><img src="photos_mktlogos/alice.png"></div>
       <div class="rightcolumnvendor"><p>ALICE bags are created for you to channel your inner confidence and strength
@@ -248,6 +250,7 @@
 <br>
 
   <div class="row">
+    <a name="cc">
     <h3>CurioCities</h3>
       <div class="leftcolumnvendor"><img src="photos_mktlogos/curiocities.jpg" style="border: none;"></div>
       <div class="rightcolumnvendor"><p>Our mission is to be the industry leader in socially-conscious,
@@ -258,6 +261,7 @@
 <br>
 
   <div class="row">
+    <a name="es">
     <h3>Edina Spiritwear</h3>
       <div class="leftcolumnvendor"><img src="photos_mktlogos/edina.png"></div>
       <div class="rightcolumnvendor"><p class="left">Support your favorite local team <em>and</em> be the best dressed!</p></div>
@@ -266,6 +270,7 @@
 <br>
 
   <div class="row">
+    <a name="fff">
     <h3>Freak Flag Foods</h3>
       <div class="leftcolumnvendor"><img src="photos_mktlogos/fff.png" style="border: none;"></div>
       <div class="rightcolumnvendor"><p class="left">Freak Flag Foods is an invitation to inspire imagination and creativity.
@@ -278,6 +283,7 @@
 <br>
 
   <div class="row">
+    <a name="jmj">
     <h3>Jessica Matrasko Jewelry</h3>
       <div class="leftcolumnvendor"><img src="photos_mktlogos/jmj.png" style="border: none;"></div>
       <div class="rightcolumnvendor"><p class="left">Jessica Matrasko Jewelry was established in 2007 with the
@@ -290,6 +296,7 @@
 <br>
 
   <div class="row">
+    <a name="kt">
     <h3>KT Design</h3>
       <div class="leftcolumnvendor"><img src="photos_mktlogos/ktdesign.png"></div>
       <div class="rightcolumnvendor"><p class="left">KT Design has the perfect range of gifts for everyone on your list from
@@ -301,6 +308,7 @@
 <br>
 
   <div class="row">
+    <a name="mlb">
     <h3>Madeline Lynne Baubles</h3>
       <div class="leftcolumnvendor"><img src="photos_mktlogos/MLB.jpg" style="border: none;"></div>
       <div class="rightcolumnvendor"><p class="left">Mother-daughter duo Sarah and Maddie love all things creative and GIRLY!
@@ -311,6 +319,7 @@
 <br>
 
   <div class="row">
+    <a name="ns">
     <h3>Nu Skin</h3>
       <div class="leftcolumnvendor"></div>
       <div class="rightcolumnvendor"><p class="left"></p></div>
@@ -319,6 +328,7 @@
 <br>
 
   <div class="row">
+    <a name="namakan">
     <h3>Namakan Fur</h3>
       <div class="leftcolumnvendor"><img src="photos_mktlogos/namakan.png" style="border: none;"></div>
       <div class="rightcolumnvendor"><p class="left">As born and bred Minnesotans, we know that with the right gear,
@@ -331,6 +341,7 @@
 <br>
 
   <div class="row">
+    <a name="nn">
     <h3>Num Nuts</h3>
       <div class="leftcolumnvendor"><img src="photos_mktlogos/numnuts.png"></div>
       <div class="rightcolumnvendor"><p class="left">Chika Griswold started Num Nuts in her Minnesota kitchen. Her passion for cooking
@@ -342,6 +353,7 @@
 <br>
 
   <div class="row">
+    <a name="smj">
     <h3>Studio Mary Jane</h3>
       <div class="leftcolumnvendor"><img src="photos_mktlogos/smj.jpg"></div>
       <div class="rightcolumnvendor"><p class="left">Mary Jane started her business with custom orders where she could work with clients
@@ -353,6 +365,7 @@
 <br>
 
   <div class="row">
+    <a name="tc">
     <h3>Thumbs Cookies</h3>
       <div class="leftcolumnvendor"><img src="photos_mktlogos/thumbs.png" style="border: none;"></div>
       <div class="rightcolumnvendor"><p class="left">Thumbs Cookies is a local cookie company that makes tiny delicious
